--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Obsidian plugin for bidirectional Google Calendar sync",
   "main": "main.js",
   "scripts": {
-    "dev": "bun build src/index.ts --outfile=main.js --watch",
-    "build": "bun build src/index.ts --outfile=main.js --minify",
+    "dev": "bun build src/index.ts --outfile=main.js --external obsidian --watch",
+    "build": "bun build src/index.ts --outfile=main.js --external obsidian --minify",
     "typecheck": "tsc --noEmit",
     "lint": "oxlint src/",
     "format": "prettier --write .",
@@ -21,9 +21,7 @@
   ],
   "author": "Jeff Wainwright",
   "license": "MIT",
-  "dependencies": {
-    "googleapis": "^144.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/bun": "^1.1.0",
     "obsidian": "^1.7.2",
